ghc-4335c07/testsuite/tests/backpack/should_compile/T13250.bkp
unit p where
    signature A where
        newtype F a = F { mkF :: a }
unit q where
    module A where
        newtype F a = F { mkF :: a }
unit r where
    dependency p[A=q:A]
